--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -273,6 +273,7 @@
                 }
                 100% {
                     transform: translateX(0px);
+                    stroke: #e60f3d;
                 }
             }
         }
@@ -289,7 +290,7 @@
             margin-bottom: 30px;
             font-size: 0.9375em;
         }
-        a>svg {
+        svg {
             stroke: #17161A;
         }
     }
