--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -166,22 +166,6 @@
             padding-left: 40px;
             margin: 25px 0;
         }
-        .btn {
-            color: #fff;
-            background-color: #F01F4B;
-            font-weight: 700;
-            line-height: 1.5;
-            padding: 15px 40px;
-            font-size: 1rem;
-            border-radius: 50rem;
-            border: none;
-            transition: transform .3s ease-out;
-            cursor: pointer;
-            &:hover {
-                background-color: #e60f3d;
-                transform: translateY(-7px);
-            }
-        }
     }
 }
 
@@ -191,7 +175,7 @@
 .business-name {
     background-color: rgba(23, 22, 26, 1);
     height: 128px;
-    width: 100vw;
+    width: auto;
     .container {
         display: flex;
         justify-content: space-between;
@@ -321,5 +305,186 @@
             background-color: #e60f3d;
             transform: translateY(-7px);
         }
+    }
+}
+
+
+/* <!-- Want to get a free consultation --> */
+
+.consult {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    position: relative;
+    .background {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+        overflow: hidden;
+    }
+    .background-image {
+        background: url('https://runwebrun.com/startbox/assets/img/root/call-to-action-1920x1080.jpg');
+        object-fit: cover;
+        object-position: 50% 50%;
+        background-position: 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100vw;
+        height: 235px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: block;
+        z-index: -1;
+    }
+    .background-color {
+        background-color: #481FA0;
+        height: 235px;
+        width: 100vw;
+        position: absolute;
+        opacity: .9;
+        z-index: -1;
+    }
+    /* consult text */
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 15px;
+        h3 {
+            font-size: 2.125em;
+            font-weight: 700;
+            color: #fff;
+            max-width: 370px;
+        }
+    }
+}
+
+
+/* <!-- What we do --> */
+
+.what {
+    .container {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 120px;
+        padding-bottom: 120px;
+    }
+    .left {
+        flex-basis: 500px;
+        padding: 0 15px;
+    }
+    .badge {
+        background-color: rgba(245, 245, 247, 1);
+        display: inline-block;
+        text-transform: uppercase;
+        padding: 6px 9px;
+        font-size: 0.75em;
+        font-weight: 700;
+        line-height: 1;
+        color: rgb(23, 22, 26);
+        text-align: center;
+        white-space: nowrap;
+        vertical-align: baseline;
+        border-radius: 6px;
+        margin-bottom: 20px
+    }
+    h3 {
+        margin-bottom: 45px;
+        font-size: 2.125em;
+        line-height: 1.4;
+        font-weight: 700;
+    }
+    p {
+        margin-bottom: 40px;
+        font-size: 1.0625em;
+        line-height: 1.5;
+    }
+    .right {
+        flex-basis: 570px;
+    }
+    .button {
+        a {
+            color: #F01F4B;
+            font-weight: 700;
+            border-bottom: 2px solid #F01F4B;
+        }
+    }
+}
+
+
+/* <!-- Successful projects --> */
+
+.successful {
+    padding-top: 110px;
+    padding-bottom: 120px;
+    position: relative;
+    .background {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+        overflow: hidden;
+    }
+    .background-image {
+        background: url('https://runwebrun.com/startbox/assets/img/root/numbers-1920x600.jpg');
+        object-fit: cover;
+        object-position: 50% 50%;
+        background-position: 50%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100vw;
+        height: 375px;
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: block;
+        z-index: -1;
+    }
+    .background-color {
+        background-color: #F01F4B;
+        height: 375px;
+        width: 100vw;
+        position: absolute;
+        opacity: .88;
+        z-index: -1;
+    }
+    .container {
+        display: flex;
+        justify-content: space-between;
+    }
+    .card {
+        flex-basis: 300px;
+    }
+    .card-2>.desc {
+        max-width: 238px;
+    }
+    .card-4>.desc {
+        max-width: 223px;
+    }
+    .number {
+        font-size: 3.125em;
+        line-height: 1.2;
+        font-weight: 700;
+        color: #fff;
+    }
+    .name {
+        font-size: 1em;
+        line-height: 1.6;
+        font-weight: 700;
+        color: #fff;
+        margin-bottom: 15px;
+    }
+    .desc {
+        font-size: 0.9375em;
+        color: #fff;
     }
 }
