--- a/app/assets/styles/modules/_reveal-item.css
+++ b/app/assets/styles/modules/_reveal-item.css
@@ -1,10 +1,9 @@
 .reveal-item {
-  opacity: 0;
-  transition: opacity 1.5s ease-out, transform 1.5s ease-out;
-  transform: scale(1.15);
-
-  &--is-visible {
-    opacity: 1;
-    transform: scale(1);
-  }
+    opacity: 0;
+    transition: opacity 1.5s ease-out, transform 1.5s ease-out;
+    transform: translate3d(50px, 50px, 50px) scale(0.9);
+    &--is-visible {
+        opacity: 1;
+        transform: translate3d(0, 0, 0) scale(1);
+    }
 }
