--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -7,12 +7,39 @@
         background-size: cover;
         width: 100%;
         height: auto;
-        .container {
+        .line {
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            top: 79px;
+            left: 0;
+            bottom: 0;
+            background: #fff;
+            opacity: 0.3;
+        }
+        .navigation {
+            position: fixed;
+            position: fixed;
+            width: 100%;
+            transition: .3s ease-out;
+            scroll-behavior: smooth;
+            height: 80px;
+            &--dark {
+                background-color: #17161A;
+                box-shadow: 0 0 2px 2px rgb(0 0 0 / 4%);
+                z-index: 2;
+                .logo>svg {
+                    stroke: #fff;
+                    fill: #fff;
+                    color: #fff;
+                }
+            }
+        }
+        .row {
             display: flex;
             justify-content: space-between;
+            height: 100%;
             align-items: center;
-            height: 80px;
-            box-shadow: inset 0 -1px rgb(177 177 180 / 20%);
         }
         nav {
             margin-left: auto;
@@ -57,7 +84,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height: 532px;
+            height: 682px;
             #fname {
                 padding: 14px 20px;
                 font-size: 14px;
@@ -111,6 +138,8 @@
                 }
             }
             .right {
+                position: relative;
+                top: 33px;
                 .box {
                     width: 400px;
                     height: 446px;
@@ -130,8 +159,13 @@
             #choice {
                 margin-top: 13px;
                 appearance: none;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
                 background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='7' fill='none'%3e%3cpath fill='%234B4A4D' d='m6 6-.495.495L6 6.99l.495-.495L6 6ZM.505 1.495l5 5 .99-.99-5-5-.99.99Zm5.99 5 5-5-.99-.99-5 5 .99.99Z'/%3e%3c/svg%3e");
                 background-repeat: no-repeat;
+                background-position: 100% calc(50% - 8px);
+                background-size: 12px 7px;
                 background-position: calc(100% - 20px) center;
                 background-size: 12px 7px;
                 /*  */
@@ -327,6 +361,16 @@
             opacity: .9;
             z-index: -1;
         }
+        svg {
+            color: #e60f3d;
+            margin-right: 15px;
+        }
+        a {
+            font-weight: 700
+        }
+        .email {
+            margin-top: 15px;
+        }
         /* consult text */
         .container {
             display: flex;
@@ -486,7 +530,7 @@
             &::after {
                 content: "";
                 position: absolute;
-                top: 0;
+                top: 35px;
                 right: 0;
                 left: 0;
                 height: 15px;
@@ -715,12 +759,11 @@
             }
         }
         .acc-arrow {
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='#FF0000' viewBox='0 0 16 10'%3e%3cpath fill='%2317161A' d='m8 8-.707.707.707.707.707-.707L8 8ZM.293 1.707l7 7 1.414-1.414-7-7L.293 1.707Zm8.414 7 7-7L14.293.293l-7 7 1.414 1.414Z'/%3e%3c/svg%3e");
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 10'%3e%3cpath fill='blue' d='m8 8-.707.707.707.707.707-.707L8 8ZM.293 1.707l7 7 1.414-1.414-7-7L.293 1.707Zm8.414 7 7-7L14.293.293l-7 7 1.414 1.414Z'/%3e%3c/svg%3e");
             background-repeat: no-repeat;
             object-fit: cover;
             object-position: 50% 50%;
             background-position: center;
-            background-repeat: no-repeat;
             background-size: auto;
             width: 1.25rem;
             height: 1.25rem;
@@ -728,7 +771,7 @@
             transition: transform .2s ease-out;
             &--rotate {
                 transform: rotate(-180deg);
-                background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='#FF0000' viewBox='0 0 16 10'%3e%3cpath fill='%red' d='m8 8-.707.707.707.707.707-.707L8 8ZM.293 1.707l7 7 1.414-1.414-7-7L.293 1.707Zm8.414 7 7-7L14.293.293l-7 7 1.414 1.414Z'/%3e%3c/svg%3e");
+                background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='red' viewBox='0 0 16 10'%3e%3cpath fill='%red' d='m8 8-.707.707.707.707.707-.707L8 8ZM.293 1.707l7 7 1.414-1.414-7-7L.293 1.707Zm8.414 7 7-7L14.293.293l-7 7 1.414 1.414Z'/%3e%3c/svg%3e");
             }
         }
         .hidden-content {
@@ -767,8 +810,356 @@
             }
             &:hover {
                 a::after {
-                    transform: translateX(100%);
+                    transform: translateX(-100%);
                 }
+            }
+        }
+    }
+    /* <!-- what people say about our company --> */
+    
+    .testimonial {
+        position: relative;
+        height: 723px;
+        background-color: rgba(23, 22, 26, 1);
+        padding-top: 120px;
+        padding-bottom: 130px;
+        .background {
+            background-image: url("https://runwebrun.com/startbox/assets/img/root/services-shape-420x487.png");
+            background-repeat: no-repeat;
+            background-position: 0 0;
+            background-size: auto;
+            position: absolute;
+            top: 239px;
+            left: 0;
+            bottom: 0;
+            width: 420px;
+        }
+        .row {
+            display: flex;
+        }
+        .left {
+            flex-basis: 300px;
+            h2 {
+                font-size: 2.5em;
+                line-height: 1.2;
+                font-weight: 700;
+                color: #fff;
+            }
+        }
+        .right {
+            flex-basis: 800px;
+            margin-left: 110px;
+        }
+        /* swiper JS */
+        .swiper {
+            width: 770px;
+            height: auto;
+        }
+        .swiper-slide {
+            width: 370px;
+            height: 357px;
+            /* width: 370px;
+            height: auto; */
+            /* margin-right: 30px; */
+        }
+        .star {
+            margin-bottom: 30px;
+        }
+        .card {
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+            background-color: #262528;
+            padding: 50px 40px;
+        }
+        .profile {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .profile-picture {
+            width: 64px;
+            height: 64px;
+            border-radius: 50%;
+            overflow: hidden;
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .profile-desc {
+            max-width: 226px;
+            padding-left: 20px;
+            p {
+                color: #B1B1B4;
+                font-size: 0.875em;
+                margin: 0;
+                line-height: 1.6;
+            }
+        }
+        .name {
+            color: #fff;
+            margin-bottom: 5px;
+            font-size: 1em;
+            line-height: 1.6;
+        }
+        .comments {
+            color: #fff;
+            font-size: 1.0625em;
+            font-weight: 500;
+            line-height: 1.6;
+        }
+        .swiper-buttons {
+            display: inline-flex;
+            gap: 15px;
+            margin-top: 70px;
+            margin-left: 5px;
+        }
+        .swiper-button-prev {
+            cursor: pointer;
+            width: 46px;
+            height: 46px;
+            border-radius: 50%;
+            background-color: #262528;
+            display: grid;
+            svg {
+                margin: auto;
+                color: #B1B1B4;
+                transition: .3s ease-out;
+            }
+            &:hover {
+                svg {
+                    transform: translateX(2%) scale(1.1);
+                    color: #fff;
+                }
+            }
+        }
+        .swiper-button-next {
+            cursor: pointer;
+            width: 46px;
+            height: 46px;
+            border-radius: 50%;
+            background-color: #262528;
+            display: grid;
+            svg {
+                margin: auto;
+                color: #B1B1B4;
+                transition: .3s ease-out;
+            }
+            &:hover {
+                svg {
+                    color: #fff;
+                    transform: translateX(2%) scale(1.1);
+                }
+            }
+        }
+    }
+    /* Our blog Section */
+    
+    .blog {
+        padding-top: 120px;
+        padding-bottom: 130px;
+        /* blog header */
+        .row-1 {
+            height: 133px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 90px;
+        }
+        .left {
+            span {
+                display: inline-block;
+                padding: 6px 9px;
+                background-color: rgba(177, 177, 180, 0.2);
+                font-size: 0.75em;
+                font-weight: 700;
+                line-height: 1;
+                text-align: center;
+                white-space: nowrap;
+                vertical-align: baseline;
+                border-radius: 6px;
+                margin-bottom: 20px;
+            }
+        }
+        h3 {
+            font-size: 2.125em;
+            line-height: 1.4;
+            font-weight: 700;
+        }
+        /* row-2 section / blog  */
+        .row-2 {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .left-2 {
+            flex-basis: 500px;
+            padding: 0 15px;
+            transition: transform .3s ease-out, color .5s ease;
+            &:hover {
+                .img-holder-1 a>img {
+                    transform: scale(1.1);
+                }
+                .card-body-1 .title {
+                    color: #e60f3d;
+                }
+            }
+        }
+        .img-holder-1 {
+            width: 470px;
+            height: 329px;
+            position: relative;
+            overflow: hidden;
+            border-radius: 20px;
+            span {
+                text-transform: uppercase;
+                background-color: rgba(23, 22, 26, 1);
+                position: absolute;
+                top: 0;
+                left: 0;
+                color: #fff;
+                margin-top: 20px;
+                margin-left: 20px;
+                letter-spacing: 0.04em;
+                z-index: 1;
+                display: inline-block;
+                padding: 6px 9px;
+                font-size: 0.75em;
+                font-weight: 700;
+                line-height: 1;
+                text-align: center;
+                white-space: nowrap;
+                vertical-align: baseline;
+                border-radius: 6px;
+            }
+            img {
+                position: absolute;
+                top: -43px;
+                left: 0;
+                bottom: 0;
+                width: 100%;
+                height: auto;
+                object-fit: cover;
+                transition: .3s ease-out;
+            }
+        }
+        .card-body-1 {
+            padding-top: 30px;
+        }
+        .date {
+            margin-bottom: 18px;
+            font-size: 0.875em;
+            color: #4B4A4D;
+        }
+        .title {
+            font-size: 1.25em;
+            line-height: 1.5;
+            font-weight: 700;
+            transition: color .3s ease;
+        }
+        /*  <!-- blog-content right section --> */
+        .right-2 {
+            flex-basis: 700px;
+            padding: 0 15px;
+        }
+        .card {
+            cursor: pointer;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            &:hover {
+                .img-holder a>img {
+                    transform: scale(1.3);
+                }
+                .card-body .title {
+                    color: #e60f3d;
+                }
+            }
+        }
+        .img-holder {
+            width: 170px;
+            height: 150px;
+            margin-right: 30px;
+            overflow: hidden;
+            position: relative;
+            border-radius: 10px;
+            img {
+                position: absolute;
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                width: 170px;
+                height: 149px;
+                object-fit: cover;
+                transition: transform .3s ease-out;
+            }
+        }
+        .card-body {
+            flex-basis: 470px;
+        }
+        .card-2 {
+            margin-top: 30px;
+        }
+        .card-3 {
+            margin-top: 30px;
+        }
+    }
+    /* footer section */
+    
+    .footer {
+        padding-top: 120px;
+        padding-bottom: 100px;
+        background-color: rgba(23, 22, 26, 1);
+        height: 434px;
+        color: #fff;
+        .row {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .left {
+            flex-basis: 300px;
+        }
+        .p1 {
+            font-size: 0.9375em;
+            margin-bottom: 35px;
+            line-height: 1.5;
+        }
+        .icons {
+            display: flex;
+            padding: 0;
+            gap: 15px;
+        }
+        .p2 {
+            font-size: 0.8125em;
+            line-height: 1.5;
+            color: #858589;
+        }
+        /* right section footer */
+        .right {
+            flex-basis: 700px;
+            display: flex;
+            justify-content: space-between;
+            h6 {
+                text-transform: uppercase;
+                letter-spacing: 0.04em;
+                color: #fff;
+                margin-bottom: 25px;
+                font-size: 0.75rem;
+                font-weight: 700;
+                line-height: 1.2;
+            }
+            .nav {
+                padding: 0;
+            }
+            .nav-item {
+                margin-bottom: 20px;
+            }
+            .nav-link {
+                color: #fff;
+                opacity: 0.6;
             }
         }
     }
