--- a/app/assets/styles/modules/_header.css
+++ b/app/assets/styles/modules/_header.css
@@ -656,7 +656,7 @@
             background-repeat: no-repeat;
             background-size: cover;
             width: 100%;
-            height: 650px;
+            height: 775px;
             position: absolute;
             z-index: -1;
         }
@@ -671,11 +671,76 @@
             padding: 15px 40px;
             font-size: 1rem;
             border-radius: 40px;
+            transition: .3s ease;
+            cursor: pointer;
+            &:hover {
+                transform: translateY(-5px);
+            }
             svg {
                 position: relative;
                 top: 18px;
                 left: -6px;
             }
+        }
+    }
+    /* pop-up */
+    
+    .pop-up-bg {
+        background-color: rgba(23, 22, 26, .6);
+        position: absolute;
+        height: 8700px;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: -10;
+        opacity: 0;
+        overflow: hidden;
+        transition: .3s ease-out;
+        &--active {
+            z-index: 10;
+            opacity: 1;
+        }
+    }
+    
+    .pop-up {
+        position: absolute;
+        width: 100%;
+        height: 953px;
+        z-index: 15;
+        top: 4650px;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: -15;
+        opacity: 0;
+        transition: .3s ease-out;
+        &--active {
+            z-index: 15;
+            opacity: 1;
+        }
+        .container {
+            max-width: 900px;
+            margin: auto;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            text-align: center;
+            text-align: center;
+            position: relative;
+        }
+        .pop-up-x {
+            position: absolute;
+            z-index: 15;
+            font-size: 25px;
+            top: 5px;
+            right: 0;
+            color: #fff;
+            text-align: right;
+            cursor: pointer;
+        }
+        .iframe {
+            max-width: 900px;
+            width: 100%;
+            height: 500px;
         }
     }
     /* Companies with logoes Flexbox */
